force-app/main/default/objects/CF_Permission_Mapping__c/CF_Permission_Mapping__c.object-meta.xml
<CustomObject>
    <description>This Permission Set is provided for Regional Application Administrators in order for them to have elevated rights.  This enables them to create VA Organization (Office) Accounts, VA Organization (Staff) Contacts and access the wizard in order to grant Applications to users.</description>
    <label>Permission Mapping</label>
    <nameField>
        <label>Permission Sets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permission Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>