force-app/main/default/objects/CF_Permission_Mapping__c/fields/Access_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_API_Name__c</fullName>
    <label>Access API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>