force-app/main/default/objects/CF_Permission_Mapping__c/fields/Access_Type__c.field-meta.xml
<CustomField>
    <fullName>Access_Type__c</fullName>
    <label>Access Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Groups</fullName>
            </value>
            <value>
                <fullName>Queues</fullName>
            </value>
            <value>
                <fullName>Permission Sets</fullName>
            </value>
            <value>
                <fullName>Permission Set Groups</fullName>
            </value>
            <value>
                <fullName>Permission Set Licenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>