force-app/main/default/objects/CF_Permission_Mapping__c/fields/Application_Role__c.field-meta.xml
<CustomField>
    <fullName>Application_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Level</label>
    <referenceTo>CF_Application_Level__c</referenceTo>
    <relationshipName>Permission_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>