force-app/main/default/objects/CF_Permission_Mapping__c/fields/DTC_Application__c.field-meta.xml
<CustomField>
    <fullName>DTC_Application__c</fullName>
    <description>To associate the DTC Application to the Permission Sets.</description>
    <label>DTC Application</label>
    <referenceTo>DTC_Application__c</referenceTo>
    <relationshipName>VIEWS_Permission_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>