force-app/main/default/objects/CF_Permission_Mapping__c/fields/DTC_Application_Level__c.field-meta.xml
<CustomField>
    <fullName>DTC_Application_Level__c</fullName>
    <label>DTC Application Level</label>
    <referenceTo>DTC_Application_Level__c</referenceTo>
    <relationshipLabel>Permission Mappings</relationshipLabel>
    <relationshipName>Permission_Mappings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>