force-app/main/default/objects/CF_Permission_Mapping__c/fields/Permission_Location__c.field-meta.xml
<CustomField>
    <fullName>Permission_Location__c</fullName>
    <label>Permission Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Destination</fullName>
                <default>true</default>
                <label>Destination</label>
            </value>
            <value>
                <fullName>Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>