force-app/main/default/objects/CF_Permission_Mapping__c/fields/Permission_Set_ID__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Permission Set ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>