force-app/main/default/objects/CF_Permission_Mapping__c/recordTypes/Package_License.recordType-meta.xml
<RecordType>
    <fullName>Package_License</fullName>
    <active>true</active>
    <label>Package License</label>
</RecordType>