force-app/main/default/objects/CF_Permission_Mapping__c/recordTypes/Permission_Sets_License.recordType-meta.xml
<RecordType>
    <fullName>Permission_Sets_License</fullName>
    <active>true</active>
    <description>Permission Sets License needed for the user</description>
    <label>Permission Sets License</label>
</RecordType>