force-app/main/default/objects/CF_Permission_Mapping__c/recordTypes/VALERI_Groups.recordType-meta.xml
<RecordType>
    <fullName>VALERI_Groups</fullName>
    <active>true</active>
    <description>Give names of the groups to be assigned to the user</description>
    <label>Groups</label>
</RecordType>