force-app/main/default/objects/CF_Permission_Mapping__c/recordTypes/VALERI_Permission_Sets.recordType-meta.xml
<RecordType>
    <fullName>VALERI_Permission_Sets</fullName>
    <active>true</active>
    <description>Permission Sets to be associated to the user</description>
    <label>Permission Sets</label>
</RecordType>